use ArrayLists instead of LinkedLists for better performance